--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ beautifulsoup4 = "^4.12.3"
 python-dateutil = "^2.8.2"
 backoff = "^2.2.1"
 pydantic = "^2.6.1"
+jsonlines = "^4.0.0"
 
 
 [build-system]
